--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <div class="navbar-div">  
 <div class="logo">
-    <img src="assets/images/LOGO WEB.jpg" alt="logo image">
+   <a href="https://wasi390.github.io/cv/"> <img src="assets/images/LOGO WEB.jpg" alt="logo image"></a>
 </div>
 
 <nav>
