--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
 <section id="projects">
     <div class="main-div">
-        <h1 class="heading4"><a href="file:///E:/Tindog-bootstrap/tindog%20web/index.html">TINDOG</a></h1>
+        <h1 class="heading4"><a href="https://rosajen27.github.io/tindog/">TINDOG</a></h1>
         <p class="p3">Dogs are beloved companions and one of the most popular pets worldwide. They are known for their loyalty, affection, and unwavering devotion to their owners. Dogs have been domesticated for thousands of years and have developed a deep bond with humans.
 
             One of the remarkable traits of dogs is their diverse range of breeds, each with its unique characteristics. From small breeds like Chihuahuas and Pomeranians to large breeds such as Great Danes and Saint Bernards, there is a dog for every preference and lifestyle. Different breeds have varying temperaments, energy levels, and physical attributes, making them suitable for various roles, including working dogs, service animals, therapy dogs, and loving family pets.
